@@ -1,3 +1,9 @@
+TAG: nomenload-6-0-0-4
+DATE: 08/31/2015
+STAFF: lec
+CHANGES:
+1) TR12083/mrk_marker/_curationstate_key/obsolet
+
 TAG: nomenload-6-0-0-3
 TAG: nomenload-6-0-0-2
 TAG: nomenload-6-0-0-1
